# farcaster-card

./: Anchor.toml  BASE_DEPLOYMENT_README.md  DEPLOYMENT_INSTRUCTIONS.md  README.md  SOLANA_NFT_README.md  hardhat.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
artifacts/@openzeppelin/contracts/interfaces/draft-IERC6093.sol/: IERC1155Errors.dbg.json
artifacts/@openzeppelin/contracts/token/ERC721/extensions/ERC721URIStorage.sol/: ERC721URIStorage.dbg.json
artifacts/@openzeppelin/contracts/utils/math/SignedMath.sol/: SignedMath.dbg.json
artifacts/contracts/FarcasterProNFT.sol/: FarcasterProNFT.dbg.json  FarcasterProNFT.json
cache/: solidity-files-cache.json
contracts/: FarcasterProNFT.sol
programs/farcaster-pro-nft/: Cargo.toml
programs/farcaster-pro-nft/src/: lib.rs
public/: prousers_first10k.csv
public/.well-known/: farcaster.json
scripts/: deploy-solana.js  deploy.js  get-testnet-eth.js
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/: middleware.ts
src/app/api/auth/: route.ts
src/app/api/authorized-fids/: route.ts
src/app/api/upload-image-blob/: route.ts
src/app/api/user/[id]/: route.ts
src/components/: SolanaWalletProvider.tsx  VirtualCard.tsx  WagmiProvider.tsx
src/context/: AuthContext.tsx
src/lib/: wagmi.ts
src/utils/: cardImage.ts  nftMinting.ts  solanaMinting.ts
