[package]
name = "farcaster-pro-nft"
version = "0.1.0"
description = "Farcaster Pro NFT Minting Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "farcaster_pro_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "4.2.0" 